[gd_scene load_steps=2 format=3 uid="uid://c23gtbsec52mp"]

[ext_resource type="Script" path="res://scripts/item_option.gd" id="1_diyc7"]

[node name="ItemOption" type="ColorRect"]
custom_minimum_size = Vector2(180, 55)
anchors_preset = -1
anchor_right = 0.156
anchor_bottom = 0.077
offset_right = 0.287994
offset_bottom = 5.104
color = Color(0.548963, 0.548963, 0.548962, 1)
script = ExtResource("1_diyc7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 2.0
offset_top = 2.0
offset_right = 26.0
offset_bottom = 26.0
color = Color(0, 0, 0, 1)

[node name="ItemIcon" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_left = 2.0
offset_top = 0.5
offset_right = 212.0
offset_bottom = 240.5
scale = Vector2(0.095, 0.095)

[node name="lbl_name" type="Label" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 2.0
offset_right = 79.0
offset_bottom = 25.0
text = "Name"
horizontal_alignment = 1

[node name="lbl_desc" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 1.0
offset_top = 27.0
offset_right = 179.0
offset_bottom = 54.0
theme_override_font_sizes/font_size = 8
text = "Description of Item"
autowrap_mode = 3

[node name="lbl_level" type="Label" parent="."]
layout_mode = 0
offset_left = 130.0
offset_top = 3.0
offset_right = 170.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 12
text = "Level: 1"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
